##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybel_jupyter
version = 0.3.0-dev
description = A PyBEL extension for Jupyter notebooks
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pybel/pybel-jupyter
download_url = https://github.com/pybel/pybel-jupyter/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel-jupyter/issues
    Source Code = https://github.com/pybel/pybel-jupyter
    Documentation = https://pybel-jupyter.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    pybel>=0.14.7
    jinja2
    ipython

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pybel
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/pybel_jupyter
    .tox/*/lib/python*/site-packages/pybel_jupyter

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
